# project_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: template.cpp  template.h
test/: CMakeLists.txt  test_main.cpp
